--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "graphql_ppx": "^0.2.8",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
-    "reason-react": "^0.5.3"
+    "reason-react": "0.7.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "1.3.11",
@@ -39,7 +39,8 @@
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
     "react-apollo": "2.3.2",
-    "subscriptions-transport-ws": "0.9.0"
+    "subscriptions-transport-ws": "0.9.0",
+    "upgrade-reason-react": "git+https://github.com/chenglou/upgrade-reason-react.git#0.6.0-to-0.7.0"
   },
   "lint-staged": {
     "*.re": [
